--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,44 +3,50 @@
     <head>
         <title> {% block title %} {% endblock %}</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='custom.css') }}">
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </head>
     <body>
         <div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">
-                    <span style="color:#6F110E">Harvard</span>
-                    <span style="color:#6F110E"> College</span>
-                    <span style="color:#E8423D"> Asian</span>
-                    <span style="color:#3B41A1"> Student</span>
-                    <span style="color:#E8BB3D"> Arts</span>
-                    <span style="color:#30B639"> Project</span>
-                </a>
+                <div>
+                    <a class="navbar-brand" href="{{ url_for('index') }}">
+                        <span style="color:#E8423D"> Asian</span>
+                        <span style="color:#3B41A1"> Student</span>
+                        <span style="color:#E8BB3D"> Arts</span>
+                        <span style="color:#30B639"> Project</span>
+                    </a>
+                </div>
+                
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 
-                <div class="collapse navbar-collapse float-right" id="navbarTogglerDemo02">
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" id="red" href="#">About</a>
+                            <a class="nav-link" id="red" href="{{ url_for('about') }}">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="blue" href="#">Board</a>
+                            <a class="nav-link" id="blue" href="{{ url_for('board') }}">Board</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="yellow" href="#">Contact</a>
+                            <a class="nav-link" id="yellow" href="{{ url_for('contact') }}">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="green" href="#">Spotlight</a>
+                            <a class="nav-link" id="green" href="{{ url_for('spotlight') }}">Spotlight</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink red" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Productions
+                            <a class="nav-link dropdown-toggle" style="color: grey" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Events
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">The East Side</a>
-                                <a class="dropdown-item" href="#">Arts First</a>
-                                <a class="dropdown-item" href="#">Open Mic Night</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" style="color: #000000" href="{{ url_for('productions') }}">Productions</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" id="red" href="{{ url_for('eastside') }}">The East Side</a>
+                                <a class="dropdown-item" id="blue" href="{{ url_for('artsfirst') }}">Arts First</a>
+                                <a class="dropdown-item" id="green" href="{{ url_for('openmic') }}">Open Mic Night</a>
                             </div>
                         </li>
                     </ul>
