index, about, board

--- a/static/custom.css
+++ b/static/custom.css
@@ -1,34 +1,115 @@
 @charset "UTF-8";
-#logo {
-  min-height: 20px;
+#navDropdown {
+  position: relative;
+  /* containing block for positioning */
+  display: block;
+  float: right;
+  list-style: none;
+  padding: 0;
+  margin: 0 65px 0 0;
+}
+
+a#black:hover {
+  color: #555555;
+  background-color: #D5D6D5;
+  border: 1px solid #000000;
 }
 
 a#red:hover {
-  color: #E8423D !important;
-  background-color: #FFA9A6 !important;
+  color: #6F110E;
+  background-color: #FFA9A6;
   border: 1px solid #E8423D;
-  border-color: #E8423D;
 }
 
 a#yellow:hover {
-  color: #E8BB3D !important;
+  color: #6B4F00;
   background-color: #FFE8A6;
   border: 1px solid #E8BB3D;
-  border-color: #E8BB3D;
 }
 
 a#green:hover {
-  color: #30B639 !important;
+  color: #0B5710;
   background-color: #9EF2A3;
   border: 1px solid #30B639;
-  border-color: #30B639;
 }
 
 a#blue:hover {
-  color: #3B41A1 !important;
+  color: #13164D;
   background-color: #A6A9EC;
   border: 1px solid #3B41A1;
-  border-color: #3B41A1;
+}
+
+.heading {
+  text-align: center;
+  color: #000000;
+  font-family: sans-serif;
+}
+
+.margin {
+  margin: 0 50px;
+}
+
+.text {
+  font-family: serif;
+  font-size: 13pt;
+  color: #555555;
+}
+
+div.gallery {
+  border: 1px solid #D5D6D5;
+}
+
+div.gallery:hover {
+  border: 1px solid #000000;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+
+.nameCap {
+  color: #000000;
+  text-align: center;
+  font-size: 16pt;
+  font-weight: bold;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.roleCap {
+  color: grey;
+  text-align: center;
+  font-size: 13pt;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  text-transform: capitalize;
+}
+
+.responsive {
+  padding: 6px;
+  float: left;
+  width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 49.99999%;
+    margin: 6px 0;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 100%;
+  }
+}
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 /*!
