--- a/templates/about.html
+++ b/templates/about.html
@@ -5,8 +5,178 @@
 {% endblock %}
 
 {% block heading %}
-    About Harvard College Asian Student Arts Project
+    About the
+    <span style="color:#E8423D"> Asian</span>
+    <span style="color:#3B41A1"> Student</span>
+    <span style="color:#E8BB3D"> Arts</span>
+    <span style="color:#30B639"> Project</span>
 {% endblock %}
 
 {% block body %}
+<br><br>
+<div class="margin">
+    <h2 style="text-decoration:underline">ASAP Constitution</h2>
+</div>
+<br>
+
+<div name="Article1" class="margin">
+    <h3>Article I: Organization Name</h3>
+    <p class="text">
+        The name of the organization shall be ASAP (Asian Student Arts Project). 
+    </p>
+</div>
+
+<div name="Article2" class="margin">
+    <h3>Article II: Purpose</h3>
+    <p>
+        <p class="text">
+            The purpose of ASAP is to provide the network and resources for Asian and Asian-American students 
+            across multiple disciplines including theater, film, dance, music, comedy, writing, entertainment, 
+            media, and more to make art and create a community for these artists with a particular focus on dramatic 
+            and visual arts. 
+        </p>
+        <p class="text">
+            ASAP aims to celebrate the community, experience, culture, and history of Asian students 
+            at Harvard with events such as group discussions, movie screenings, workshops, open-mic nights, group 
+            outings, panels, and large- and small-scale performances and theatrical productions. 
+        </p>
+        <p class="text">
+            ASAP will aim to produce at least one arts project that concerns Asian or Asian-American culture, 
+            experiences, history, and/or arts each year. 
+        </p>
+    </p>
+</div>
+
+<div name="Article3" class="margin">
+    <h3>Article III: Membership</h3>
+    <p>
+        <p class="text">
+            Membership in this organization shall be open to all students in good standing currently enrolled in 
+            Harvard College, regardless of race, creed, color, sex, gender identity, sexual orientation, 
+            or physical disability.
+        </p>
+        <p class="text">
+            Members must be students of Harvard University, but membership is not limited to undergraduates.
+        </p>
+        <p class="text">
+            Membership shall be retained until the student severs relations with the University whether by 
+            graduation or otherwise. Membership will be retained during the vacation and recesses of the university.
+            Any affiliate of Harvard University may participate in activities or programs (alumni, wider community, etc.)
+        </p>
+        <p class="text">
+            Problematic behavior within the community may be addressed by members of the board on a case-by-case analysis. 
+        </p>
+    </p>
+</div>
+
+<div name="Article4" class="margin">
+    <h3>Article IV: Officers</h3>
+    <p class="text">
+        The officers of this group shall consist of President or Co-President, Vice President, Treasurer, 
+        Secretary, Outreach Chair, and Board.  All officers shall be registered undergraduates in Harvard College.
+        <ul class="text">
+            <li>
+                The President shall be the chief executive officer of the group and shall have general supervision and control of its activities and programs. The President will schedule and manage board meetings.  
+            </li>
+            <li>
+                The Vice President shall assist the President and assume their duties when the President is unable to serve. 
+            </li>
+            <li>
+                The Treasurer shall have general charge of the financial affairs of the group. They shall keep accurate records of these affairs.
+            </li>
+            <li>
+                The Outreach Chair will promote publicity, diversity within the club, and outreach/communication to other clubs. 
+            </li>
+            <li>
+                The Secretary shall keep a record of all meetings of the group and of all activities and programs. They will handle all communication and formal correspondence between members and officers of the group.            
+            </li>
+            <li>
+                The Board shall participate in all board meetings and be in charge of gaining interest across campus. In particular, the Board will ensure that incoming students have an opportunity to get involved and gain experience for future leadership. 
+            </li>
+        </ul>
+    </p>
+</div>
+
+<div name="Article5" class="margin">
+    <h3>Article V: Elections</h3>
+    <p>
+        <p class="text">
+            Officers shall be elected annually by the members of the group. Elections shall be held 
+            during the month of November. 
+        </p>
+        <p class="text">
+            The term of office shall start during the beginning of spring semester. 
+            The term of office for First-Year Representatives shall start immediately after they have been elected.
+        </p>
+        <p class="text">
+            To ensure a smooth transition of office, incoming officers elected in November will shadow 
+            outgoing officers until the beginning of spring semester, when their term of office begins 
+            (with the exception of the founding year). 
+        </p>
+        <p class="text">
+            Potential officers may nominate themselves or be nominated by a member of the community. 
+            Nominations may occur up until election day, and walk-on nominees may also be considered. 
+            Officers may run individually or in pairs of no more than two for each position.
+        </p>
+        <p class="text">
+            Elections will consist of speeches given by potential officers. An immediate blind ballot will be 
+            held after all of the speeches for each position have finished. 
+        </p>
+        <p class="text">
+            Election results for each position will be announced immediately following each position ballot. 
+        </p>
+        <p class="text">
+            If not chosen for a position, the nominee(s) will be eligible to run for subsequent positions. 
+            If chosen, however, the nominee(s) will be ineligible to run for other positions. 
+        </p>
+        <p class="text">
+            Thread Leaders will volunteer and appear before the Board in order to have their leadership approved. 
+            There may be multiple leaders for each thread. 
+        </p>
+        <p class="text">
+            If an officer is unable to complete their term, an impromptu election will be held to replace them, 
+            excluding current officers (with the exception of the President, who will be replaced by the 
+            Vice President when they are unable to complete their duties as President). In the case of a tie, 
+            a discussion without the nominees will be held, followed by a re-vote. If the nominees choose, 
+            they may work as co-officers in each position, with a maximum of two officers per position.
+        </p>
+    </p>
+</div>
+
+<div name="Article6" class="margin">
+    <h3>Article VI: Meetings</h3>
+    <p>
+        <p class="text">
+            Meetings of the groups shall be held on a regular basis for the purpose of determining policy, 
+            activities, programs, and other business. Special meetings of the group may be called by the 
+            President, Vice President, the Secretary, or any five members of the group.
+            A simple majority of the group shall constitute a quorum.
+        </p>
+        <p class="text">
+            The President shall chair all meetings. In the President’s absence, the Vice President shall chair.
+            Notice of regular and special meetings shall be communicated to all members of the group by the Secretary.
+        </p>
+        <p class="text">
+            All members shall have one vote with respect to any resolutions put forward during a meeting.
+        </p>
+        <p class="text">
+            A proposal for events, shows, or other ideas may be submitted by anyone via email or in person 
+            to be reviewed during regular meetings. Time will be set aside during meetings for suggestions, 
+            discussions, and submissions.        
+        </p>
+        <p class="text">
+            Proposals will be approved by vote. Members who are not present at the time of the meeting will 
+            not have the ability to vote via written proxy.  
+        </p>
+    </p>
+</div>
+
+<div name="Article7" class="margin">
+    <h3>Article VII: Amendments</h3>
+    <p class="text">
+        The constitution may be amended by a two-thirds majority vote of the group.
+        Any two members of the group may propose an amendment. Proposals shall be filed in writing with 
+        the Secretary prior to the meeting so that the group may debate the proposal.
+    </p><br><br>
+</div>
 {% endblock %}
