--- a/templates/index.html
+++ b/templates/index.html
@@ -5,24 +5,43 @@
 {% endblock %}
 
 {% block heading %}
-    Asian Student Arts Project
+    Harvard College 
+    <span style="color:#E8423D"> Asian</span>
+    <span style="color:#3B41A1"> Student</span>
+    <span style="color:#E8BB3D"> Arts</span>
+    <span style="color:#30B639"> Project</span>
 {% endblock %}
 
 {% block body %}
-<div name="intro">
-    <h2>
-        A cool new club!
-    </h2>
-    <p>
-        Introductory blurb
+<div name="Introduction" class="margin">
+    <h3>Mission</h3>
+    <p class="text">
+        The Harvard College Asian Student Arts Project is a student-run organization that aims to provide the community 
+        and resources for Pan-Asian and Asian-American student artists to make, celebrate, and discuss art
+        including (but not limited to) theater, film, dance, music, comedy, writing, entertainment, media, and the visual arts.
+        ASAP aims to celebrate the community, experience, culture, and history of Asian students at Harvard with
+        events such as workshops, open mic nights, group outings, panels, and large- and small-scale productions and
+        performances.
     </p>
-    <p>
-        A quote or two about arts and asians
+    <p class="text">
+        The Asian Student Arts Project will produce at least one artistic project that concerns Asian or Asian-American 
+        culture, experiences, history, and/or arts each year.
     </p>
 </div>
-<div>
-    <h2>
-        Gallery
-    </h2>
+<div name="events" class="margin">
+    <h3>Events</h3>
+    <p class="text">
+        Check out some of our upcoming productions including 
+        <a style="font-style: italic" href="{{ url_for('eastside') }}">The East Side</a> and
+        <a style="font-style: italic" href="{{ url_for('artsfirst') }}">Arts First</a>, and our past events like
+        <a style="font-style: italic" href="{{ url_for('openmic') }}">Open Mic Night</a>!  You can also sign up for our
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeF2wJfx3rc1Z_sElw7hZcFcolcLa8Atx4xyqn9SNTarbRowA/viewform?usp=sf_link">mailing list</a> 
+        and come to our next board meeting to pitch an idea of your own or send an email to 
+        <a href="mailto:asianstudentartsproject@gmail.com" target="_top">asianstudentartsproject@gmail.com</a>.  
+        We'd love to hear from you!
+    </p>
+</div>
+<div name="gallery" class="margin">
+    <h3>Gallery</h3>
 </div>
 {% endblock %}
