east side updates

--- a/static/custom.css
+++ b/static/custom.css
@@ -1,4 +1,15 @@
 @charset "UTF-8";
+#eastsidehead {
+  color: #5a30a8;
+  font-style: italic;
+  font-size: 20pt;
+}
+
+#chardesc {
+  font-weight: bold;
+  color: black;
+}
+
 #navDropdown {
   position: relative;
   /* containing block for positioning */
@@ -56,6 +67,9 @@ a#blue:hover {
 }
 
 div.gallery {
+  margin: 5px;
+  float: left;
+  width: 200px;
   border: 1px solid #D5D6D5;
 }
 
@@ -76,7 +90,7 @@ div.desc {
 .nameCap {
   color: #000000;
   text-align: center;
-  font-size: 16pt;
+  font-size: 14pt;
   font-weight: bold;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
@@ -84,32 +98,41 @@ div.desc {
 .roleCap {
   color: grey;
   text-align: center;
-  font-size: 13pt;
+  font-size: 12pt;
   font-family: Georgia, "Times New Roman", Times, serif;
   text-transform: capitalize;
 }
 
-.responsive {
-  padding: 6px;
-  float: left;
-  width: 24.99999%;
+.slides {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px;
+  max-width: 100%;
+  height: auto;
 }
 
-@media only screen and (max-width: 700px) {
-  .responsive {
-    width: 49.99999%;
-    margin: 6px 0;
-  }
+.grid-container {
+  display: grid;
+  grid-template-columns: 120px auto;
+  margin: 10px;
+  border: 1px solid #D5D6D5;
 }
-@media only screen and (max-width: 500px) {
-  .responsive {
-    width: 100%;
-  }
+
+.grid-container:hover {
+  border: 1px solid #000000;
 }
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
+
+.grid-item {
+  margin: 10px;
+  font-size: 24px;
+  text-align: left;
+}
+
+.grid-caption {
+  color:grey; 
+  font-size: 16px;
+  text-align: left;
 }
 
 /*!
