--- a/templates/artsfirst.html
+++ b/templates/artsfirst.html
@@ -8,8 +8,16 @@
     Arts First 2019
 {% endblock %}
 
+
 {% block body %}
-<div>
-    <h2>Coming Soon!</h2>
-</div>
+<p class="margin text" style="text-align: center">
+    This spring, ASAP will be collaborating with TEATRO! and Harvard Black C.A.S.T. to create a performance art piece
+    that explores the intersection of identity and art. We hope to use the Arts First Festival as a platform to 
+    celebrate the diverse range of artistic talents from students-of-color on campus and call for Harvard's investment
+     in a multicultural center. <br><br>
+     More details will be released as the event approaches.  In the meantime, find out more about 
+     the annual <a href="https://ofa.fas.harvard.edu/arts">Arts First Festival</a> hosted by Harvard's Office of 
+     the Arts and check out what <a href="http://harvardblackcast.tumblr.com">Harvard Black C.A.S.T.</a> and 
+     <a href="https://www.facebook.com/harvardcollegeteatro/">TEATRO!</a>are up to!
+</p>
 {% endblock %}
