--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,4 +9,15 @@
 {% endblock %}
 
 {% block body %}
+<div class="margin" style="text-align: center">
+    <h5>Questions? Ideas? Want to learn more about ASAP and how to get involved? We'd love to hear from you!</h5>
+    <p class="text">
+        To contact our board, you can send an email to 
+        <a href="mailto:asianstudentartsproject@gmail.com" target="_top">asianstudentartsproject@gmail.com</a>. 
+        <br>
+        To keep up with recent ASAP news and events, check out our <a href="https://www.facebook.com/HarvardASAP/">Facebook page</a>.
+        <br>
+        To hear about arts involvement on Harvard campus, sign up for our <a href="https://docs.google.com/forms/d/e/1FAIpQLSeF2wJfx3rc1Z_sElw7hZcFcolcLa8Atx4xyqn9SNTarbRowA/viewform?usp=sf_link">mailing list</a>.
+    </p>
+</div>
 {% endblock %}
