--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 
 {% block body %}
 <div name="Introduction" class="margin">
-    <h3>Mission</h3>
+   <br/> <h3>Mission</h3>
     <p class="text">
         The Harvard College Asian Student Arts Project is a student-run organization that aims to provide the community 
         and resources for Pan-Asian and Asian-American student artists to make, celebrate, and discuss art
@@ -31,9 +31,9 @@
 <div name="events" class="margin">
     <h3>Events</h3>
     <p class="text">
-        Check out some of our upcoming productions including 
-        <a style="font-style: italic" href="{{ url_for('eastside') }}">The East Side</a> and
-        <a style="font-style: italic" href="{{ url_for('artsfirst') }}">Arts First</a>, and our past events like
+        Check out some of our past productions and events including 
+        <a style="font-style: italic" href="{{ url_for('eastside') }}">The East Side</a>,
+        <a style="font-style: italic" href="{{ url_for('artsfirst') }}">Arts First</a>, and
         <a style="font-style: italic" href="{{ url_for('openmic') }}">Open Mic Night</a>!  You can also sign up for our
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeF2wJfx3rc1Z_sElw7hZcFcolcLa8Atx4xyqn9SNTarbRowA/viewform?usp=sf_link">mailing list</a> 
         and come to our next board meeting to pitch an idea of your own or send an email to 
