--- a/templates/openmic.html
+++ b/templates/openmic.html
@@ -9,4 +9,17 @@
 {% endblock %}
 
 {% block body %}
+<div name="content" class="margin">
+    <p class="text">
+        Open Mic Night is a safe and inclusive space for for members of the ASAP community to interact with 
+        and perform for one another.  We feature musical performances, dance, stand-up comedy, slam-poetry among other 
+        forms of performance art.  Keep an eye out for our next event!
+    </p>
+    <br>
+    <h3 class="heading">December 8, 2018</h3>
+    <p class="text">
+        Our first open mic night hosted at the Signet Society was a smashing success!  Click through the gallery
+        below to see pictures of the event.
+    </p>
+</div>
 {% endblock %}
