--- a/templates/spotlight.html
+++ b/templates/spotlight.html
@@ -9,4 +9,9 @@
 {% endblock %}
 
 {% block body %}
+<h3 class="heading">Coming Soon!</h3>
+<br>
+<p class="heading">
+    <img src="{{ url_for('static', filename='logo.png') }}">
+</p>
 {% endblock %}
